# API/latestswagger2.json
@@ -1,7 +1,7 @@
 {
   "swagger" : "2.0",
   "info" : {
-    "version" : "2020-05-22T20:35:34Z",
+    "version" : "2020-06-07T14:41:43Z",
     "title" : "dev-serverless-aws-nodejs"
   },
   "host" : "6iubewzdng.execute-api.sa-east-1.amazonaws.com",
@@ -62,7 +62,11 @@
     },
     "/CentrosHospitalarios" : {
       "get" : {
-        "responses" : { },
+        "responses" : {
+          "200" : {
+            "description" : "200 response"
+          }
+        },
         "x-amazon-apigateway-integration" : {
           "uri" : "arn:aws:apigateway:sa-east-1:lambda:path/2015-03-31/functions/arn:aws:lambda:sa-east-1:768095478863:function:serverless-aws-nodejs-dev-app/invocations",
           "passthroughBehavior" : "when_no_match",
@@ -104,6 +108,67 @@
               "statusCode" : "200",
               "responseParameters" : {
                 "method.response.header.Access-Control-Allow-Methods" : "'OPTIONS,GET,POST'",
+                "method.response.header.Access-Control-Allow-Headers" : "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token,X-Amz-User-Agent'",
+                "method.response.header.Access-Control-Allow-Origin" : "'*'"
+              },
+              "responseTemplates" : {
+                "application/json" : "#set($origin = $input.params(\"Origin\"))\n#if($origin == \"\") #set($origin = $input.params(\"origin\")) #end\n#if($origin.matches(\".+\")) #set($context.responseOverride.header.Access-Control-Allow-Origin = $origin) #end"
+              }
+            }
+          },
+          "requestTemplates" : {
+            "application/json" : "{statusCode:200}"
+          },
+          "passthroughBehavior" : "when_no_match",
+          "contentHandling" : "CONVERT_TO_TEXT",
+          "type" : "mock"
+        }
+      }
+    },
+    "/envios" : {
+      "get" : {
+        "responses" : { },
+        "x-amazon-apigateway-integration" : {
+          "uri" : "arn:aws:apigateway:sa-east-1:lambda:path/2015-03-31/functions/arn:aws:lambda:sa-east-1:768095478863:function:serverless-aws-nodejs-dev-app/invocations",
+          "passthroughBehavior" : "when_no_match",
+          "httpMethod" : "POST",
+          "type" : "aws_proxy"
+        }
+      },
+      "post" : {
+        "responses" : { },
+        "x-amazon-apigateway-integration" : {
+          "uri" : "arn:aws:apigateway:sa-east-1:lambda:path/2015-03-31/functions/arn:aws:lambda:sa-east-1:768095478863:function:serverless-aws-nodejs-dev-app/invocations",
+          "passthroughBehavior" : "when_no_match",
+          "httpMethod" : "POST",
+          "type" : "aws_proxy"
+        }
+      },
+      "options" : {
+        "consumes" : [ "application/json" ],
+        "produces" : [ "application/json" ],
+        "responses" : {
+          "200" : {
+            "description" : "200 response",
+            "headers" : {
+              "Access-Control-Allow-Origin" : {
+                "type" : "string"
+              },
+              "Access-Control-Allow-Methods" : {
+                "type" : "string"
+              },
+              "Access-Control-Allow-Headers" : {
+                "type" : "string"
+              }
+            }
+          }
+        },
+        "x-amazon-apigateway-integration" : {
+          "responses" : {
+            "default" : {
+              "statusCode" : "200",
+              "responseParameters" : {
+                "method.response.header.Access-Control-Allow-Methods" : "'OPTIONS,POST,GET'",
                 "method.response.header.Access-Control-Allow-Headers" : "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token,X-Amz-User-Agent'",
                 "method.response.header.Access-Control-Allow-Origin" : "'*'"
               },
@@ -200,7 +265,22 @@
         }
       },
       "post" : {
-        "responses" : { },
+        "summary" : "Adds a new peticion to the list of existing peticiones",
+        "consumes" : [ "application/json" ],
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "peticion",
+          "description" : "It asks for resources and has the hospital id",
+          "required" : true,
+          "schema" : {
+            "$ref" : "#/definitions/peticion"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "200 response"
+          }
+        },
         "x-amazon-apigateway-integration" : {
           "uri" : "arn:aws:apigateway:sa-east-1:lambda:path/2015-03-31/functions/arn:aws:lambda:sa-east-1:768095478863:function:serverless-aws-nodejs-dev-app/invocations",
           "passthroughBehavior" : "when_no_match",
@@ -252,6 +332,7 @@
     },
     "/pruebas" : {
       "post" : {
+        "summary" : "Testing purposes, returns the body of the method",
         "responses" : { },
         "x-amazon-apigateway-integration" : {
           "uri" : "arn:aws:apigateway:sa-east-1:lambda:path/2015-03-31/functions/arn:aws:lambda:sa-east-1:768095478863:function:serverless-aws-nodejs-dev-app/invocations",
@@ -408,7 +489,80 @@
     }
   },
   "definitions" : {
-    "Empty" : { }
+    "Empty" : { },
+    "peticion" : {
+      "type" : "object",
+      "properties" : {
+        "Peticion" : {
+          "type" : "object",
+          "properties" : {
+            "idCentro" : {
+              "type" : "number"
+            }
+          },
+          "required" : [ "idCentro" ]
+        }
+      }
+    }
+  },
+  "x-amazon-apigateway-documentation" : {
+    "version" : "1",
+    "createdDate" : "2020-06-07T14:42:00Z",
+    "documentationParts" : [ {
+      "location" : {
+        "type" : "METHOD",
+        "path" : "/peticiones",
+        "method" : "POST"
+      },
+      "properties" : {
+        "summary" : "Adds a new peticion to the list of existing peticiones"
+      }
+    }, {
+      "location" : {
+        "type" : "METHOD",
+        "path" : "/pruebas",
+        "method" : "POST"
+      },
+      "properties" : {
+        "summary" : "Testing purposes, returns the body of the method"
+      }
+    }, {
+      "location" : {
+        "type" : "REQUEST_BODY",
+        "path" : "/peticiones",
+        "method" : "POST"
+      },
+      "properties" : {
+        "description" : "It asks for resources and has the hospital id"
+      }
+    }, {
+      "location" : {
+        "type" : "REQUEST_BODY",
+        "path" : "/pruebas",
+        "method" : "POST"
+      },
+      "properties" : {
+        "description" : "Any json file will work"
+      }
+    }, {
+      "location" : {
+        "type" : "RESOURCE",
+        "path" : "/peticiones"
+      },
+      "properties" : {
+        "description" : "Path used to see peticiones and add more"
+      }
+    }, {
+      "location" : {
+        "type" : "RESPONSE_BODY",
+        "path" : "/peticiones",
+        "method" : "POST",
+        "statusCode" : "200"
+      },
+      "properties" : {
+        "description" : "La peticion se agrego correctamente"
+      }
+    } ]
   },
   "x-amazon-apigateway-gateway-responses" : {
     "DEFAULT_4XX" : {
